<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/registration_background">


    <com.nightonke.wowoviewpager.WoWoViewPager
        android:id="@+id/wowo_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <charles.com.milu.CustomViews.TitleTextView
        android:id="@+id/register1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginTop="28.0dp"
        android:textColor="@color/colorWhite"
        android:text="@string/tuto_text1"
        />
    <charles.com.milu.CustomViews.TitleTextView
        android:id="@+id/register2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="28.0dp"
        android:textSize="@dimen/dimenFont_20"
        android:textColor="@color/colorWhite"
        android:text="@string/tuto_text2"
        android:alpha="0"
        />

    <charles.com.milu.CustomViews.TitleTextView
        android:id="@+id/register3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="28.0dp"
        android:textSize="@dimen/dimenFont_20"
        android:textColor="@color/colorWhite"
        android:text="@string/tuto_txt3"
        android:alpha="0"
        />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/registration_live_events_image"
        android:scaleType="fitXY"
        android:layout_below="@+id/register1Text"
        android:layout_marginTop="28.0dp"
        android:layout_marginBottom="@dimen/dimen_08"
        android:layout_above="@+id/paginate"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/registration_mingle_image1"
        android:scaleType="fitXY"
        android:layout_below="@+id/register1Text"
        android:layout_marginTop="28.0dp"
        android:layout_marginBottom="@dimen/dimen_08"
        android:layout_above="@+id/paginate"
        android:alpha="0"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/registration_messages_image"
        android:scaleType="fitCenter"
        android:layout_below="@+id/register1Text"
        android:layout_marginTop="28.0dp"
        android:layout_marginBottom="@dimen/dimen_08"
        android:layout_above="@+id/paginate"
        android:alpha="0"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/registration_messaging_image"
        android:scaleType="fitCenter"
        android:layout_below="@+id/register1Text"
        android:layout_marginTop="28.0dp"
        android:layout_marginBottom="@dimen/dimen_08"
        android:layout_above="@+id/paginate"
        android:alpha="0"/>
    <FrameLayout
        android:id="@+id/background_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/paginate"
        android:layout_width="fill_parent"
        android:layout_above="@+id/fLogLayout"
        android:layout_height="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon1"
                android:background="@drawable/indicator_round"
                android:layout_width="8dp"
                android:layout_height="8dp" />

            <ImageView
                android:layout_toEndOf="@+id/icon1"
                android:id="@+id/icon2"
                android:layout_width="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/indicator_round"
                android:layout_height="8dp" />

            <ImageView
                android:layout_toEndOf="@+id/icon2"
                android:layout_marginStart="8dp"
                android:id="@+id/icon3"
                android:layout_width="8dp"
                android:background="@drawable/indicator_round"
                android:layout_height="8dp" />

        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fLogLayout"
        android:layout_marginTop="24dp"
        android:layout_alignParentBottom="true"
        android:paddingEnd="16dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/floginLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="floginClicked"
            android:layout_centerHorizontal="true">

            <charles.com.milu.CustomViews.TitleTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="login"
                android:textSize="@dimen/dimenFont_20"
                android:textColor="@color/white"
                android:layout_toEndOf="@+id/floginButton"/>

            <ImageView
                android:id="@+id/floginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/registration_facebook_icon"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <charles.com.milu.CustomViews.TitleTextView
            android:id="@+id/skipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="skip"
            android:textColor="#99ffffff"
            android:layout_centerVertical="true"
            android:onClick="skipClicked"
            android:textSize="@dimen/dimenFont_20"
            android:layout_marginEnd="@dimen/dimen_16"/>

    </RelativeLayout>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AVLoadingIndicatorView"
        android:visibility="visible"
        app:indicatorName="BallSpinFadeLoaderIndicator"
        app:indicatorColor="@color/color_Milumain"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
