<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:fontPath="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_53">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/livemediapost_userImage"
            android:layout_width="@dimen/dimen_36"
            android:layout_height="@dimen/dimen_36"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimenMargin_08"
            app:civ_border_width="0.5dp"
            app:civ_border_color="@color/colorBlack"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/livemediapost_userName"
            android:layout_width="@dimen/dimen_100"
            android:layout_height="@dimen/dimen_16"
            android:layout_toRightOf="@+id/livemediapost_userImage"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_08"
            android:text="@string/andrea_bocceli"
            fontPath="@+sting/font_light"
            android:textSize="@dimen/dimenFont_14"/>


        <RelativeLayout
            android:layout_width="36dp"
            android:layout_height="44dp"
            android:layout_marginRight="4dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/livemediapost_upboteButton1"
                android:layout_width="25dp"
                android:layout_height="12dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/feed_up_vote_icon"/>

            <TextView
                android:id="@+id/livemediapost_upvoteCount"
                android:layout_width="30dp"
                android:layout_height="@dimen/dimen_16"
                android:layout_centerVertical="true"
                android:text="1.4K"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/dimenFont_14"/>

            <ImageView
                android:layout_alignParentBottom="true"
                android:id="@+id/livemediapost_upboteButton2"
                android:layout_width="25dp"
                android:layout_centerHorizontal="true"
                android:layout_height="12dp"
                android:background="@drawable/feed_down_vote_icon" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_320"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/livemediapost_feedImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_121"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/livemediapost_description"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="288"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/globalfeed_description"
                android:scaleY="1.1"
                android:textSize="@dimen/dimenFont_14" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/livemediapost_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="289"
                android:textColor="@color/color_OuterSpace"
                android:textSize="@dimen/dimenFont_13"
                android:gravity="center"
                android:text="@string/globalfeed_property"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="@dimen/dimen_12"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="30">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="10">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <ImageView
                            android:id="@+id/livemediapost_likeButton"
                            android:layout_width="27dp"
                            android:layout_height="24dp"
                            android:clickable="true"
                            android:background="@drawable/feed_like_icon"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="10">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <ImageView
                            android:id="@+id/livemediapost_chatButton"
                            android:layout_width="27dp"
                            android:layout_height="24dp"
                            android:background="@drawable/feed_comment_icon"
                            android:layout_centerInParent="true" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="10">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">

                        <ImageView
                            android:id="@+id/livemediapost_shareButton"
                            android:layout_width="27dp"
                            android:layout_height="24dp"
                            android:background="@drawable/feed_share_icon"
                            android:layout_centerInParent="true" />

                        <ImageView
                            android:id="@+id/livemediapost_moreButton"
                            android:layout_width="5dp"
                            android:layout_height="24dp"
                            android:background="@drawable/feed_overflow_icon"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="16dp"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
